
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 unsigned long PAGE_SIZE ;
 int assert (int) ;
 int bisect_probe () ;
 scalar_t__ evil ;
 int exit (int ) ;
 scalar_t__ good ;
 int mmap_fixed (unsigned long,unsigned long) ;
 int munmap (void*,unsigned long) ;
 int perror (char*) ;

__attribute__((used)) static unsigned long bisect_via_assign(unsigned long start, unsigned long end) {
 int word_size = sizeof(unsigned long);

 assert((end - start) % word_size == 0);
 assert((end - start) % PAGE_SIZE == 0);

 mmap_fixed(start, end - start);

 unsigned long left = 0;
 unsigned long right = (end - start) / word_size;

 while (right - left > 1) {
  unsigned long middle = left + (right - left) / 2;
  unsigned long a;
  for (a = left; a < middle; a++)
   *(unsigned long *)(start + a * word_size) =
    (unsigned long)evil;
  for (a = middle; a < right; a++)
   *(unsigned long *)(start + a * word_size) =
    (unsigned long)good;
  bool probe = bisect_probe();
  if (probe)
   left = middle;
  else
   right = middle;
 }

 int rv = munmap((void *)start, end - start);
 if (rv != 0) {
  perror("[-] munmap()");
  exit(EXIT_FAILURE);
 }

 return start + left * word_size;
}
